fix: stretchy close button

--- a/src/components/Todo.css
+++ b/src/components/Todo.css
@@ -15,4 +15,5 @@
   padding: 5px 10px;
   border-radius: 5px;
   cursor: pointer;
+  align-self: flex-start;
 }
